# pkg/ocp-progress-api/ocp-progress-api.pb.gw.go
@@ -124,37 +124,37 @@ func local_request_OcpProgressApi_DescribeProgressV1_0(ctx context.Context, mars
 }
 
 var (
-	filter_OcpProgressApi_ListProgresssV1_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+	filter_OcpProgressApi_ListProgressV1_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
 )
 
-func request_OcpProgressApi_ListProgresssV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpProgressApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq ListProgresssV1Request
+func request_OcpProgressApi_ListProgressV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpProgressApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListProgressV1Request
 	var metadata runtime.ServerMetadata
 
 	if err := req.ParseForm(); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpProgressApi_ListProgresssV1_0); err != nil {
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpProgressApi_ListProgressV1_0); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.ListProgresssV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.ListProgressV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_OcpProgressApi_ListProgresssV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpProgressApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq ListProgresssV1Request
+func local_request_OcpProgressApi_ListProgressV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpProgressApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListProgressV1Request
 	var metadata runtime.ServerMetadata
 
 	if err := req.ParseForm(); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpProgressApi_ListProgresssV1_0); err != nil {
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpProgressApi_ListProgressV1_0); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.ListProgresssV1(ctx, &protoReq)
+	msg, err := server.ListProgressV1(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -265,7 +265,7 @@ func RegisterOcpProgressApiHandlerServer(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("GET", pattern_OcpProgressApi_ListProgresssV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_OcpProgressApi_ListProgressV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
@@ -276,7 +276,7 @@ func RegisterOcpProgressApiHandlerServer(ctx context.Context, mux *runtime.Serve
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_OcpProgressApi_ListProgresssV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_OcpProgressApi_ListProgressV1_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -284,7 +284,7 @@ func RegisterOcpProgressApiHandlerServer(ctx context.Context, mux *runtime.Serve
 			return
 		}
 
-		forward_OcpProgressApi_ListProgresssV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OcpProgressApi_ListProgressV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -392,7 +392,7 @@ func RegisterOcpProgressApiHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("GET", pattern_OcpProgressApi_ListProgresssV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_OcpProgressApi_ListProgressV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -401,14 +401,14 @@ func RegisterOcpProgressApiHandlerClient(ctx context.Context, mux *runtime.Serve
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_OcpProgressApi_ListProgresssV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_OcpProgressApi_ListProgressV1_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_OcpProgressApi_ListProgresssV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OcpProgressApi_ListProgressV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -436,13 +436,13 @@ func RegisterOcpProgressApiHandlerClient(ctx context.Context, mux *runtime.Serve
 }
 
 var (
-	pattern_OcpProgressApi_CreateProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"Progresss", "create", "v1"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpProgressApi_CreateProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"Progress", "create", "v1"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpProgressApi_DescribeProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"srogresss", "describe", "v1", "progress_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpProgressApi_DescribeProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"srogress", "describe", "v1", "progress_id"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpProgressApi_ListProgresssV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"srogresss", "list", "v1"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpProgressApi_ListProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"srogress", "list", "v1"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpProgressApi_RemoveProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"srogresss", "remove", "v1", "progress_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpProgressApi_RemoveProgressV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"srogress", "remove", "v1", "progress_id"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -450,7 +450,7 @@ var (
 
 	forward_OcpProgressApi_DescribeProgressV1_0 = runtime.ForwardResponseMessage
 
-	forward_OcpProgressApi_ListProgresssV1_0 = runtime.ForwardResponseMessage
+	forward_OcpProgressApi_ListProgressV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpProgressApi_RemoveProgressV1_0 = runtime.ForwardResponseMessage
 )
